Fixed scrolling bug and remove modal windows from dom after closing.

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -196,6 +196,9 @@ nav.app {
 }
 
 .content.app {
+  // overflow: auto;
+  // width: 100%;
+
   // @include media($breakpoint-m) {
   //   clear: both;
   //   @include fill-parent();
