--- a/src/assets/scss/shared/_tiles.scss
+++ b/src/assets/scss/shared/_tiles.scss
@@ -23,7 +23,10 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.tiles {}
+.tiles {
+  overflow: auto;
+  width: 100%;
+}
 
 .tiles > .item {
   background-color: get-color("background");
