Added navigation buttons to kodi template.

--- a/src/app/components/services/detail/device-class-templates/device-class-kodi.html
+++ b/src/app/components/services/detail/device-class-templates/device-class-kodi.html
@@ -25,7 +25,8 @@
 <div class="left">
   <h2>State</h2>
   <p ng-if="service.states.length === 0">No state available.</p>
-  <div ng-repeat="state in service.states track by $index" class="state">
+  <div ng-repeat="state in service.stat
+  es track by $index" class="state">
     <p class="value">{{ state.value }}</p>
     <p class="name">{{ state.stateType.name }}</p>
   </div>
@@ -36,6 +37,8 @@
   <h2>Control</h2>
 
   <guh-remote-player action="service.actionsObject.pressButton" device-id="{{ service.id }}"></guh-remote-player>
+  <guh-remote-navigation action="service.actionsObject.pressButton" device-id="{{ service.id }}"></guh-remote-navigation>
+
 </div>
 
 <!-- Events -->
