--- a/src/app/shared/ui/form/form.scss
+++ b/src/app/shared/ui/form/form.scss
@@ -54,8 +54,8 @@ input {
 input[type="email"],
 input[type="text"],
 input[type="password"] {
-  // border-bottom: 1px solid lighten($c-grey, 50%);
-  border-bottom: 1px solid rgba($c-white, 0.1);
+  background-color: rgba($c-white, 0.1);
+  // border-bottom: 1px solid rgba($c-white, 0.1);
   color: $c-white;
   @include rem(font-size, 1);
   @include rem(line-height, 1.5);
