--- a/src/assets/scss/shared/_modal.scss
+++ b/src/assets/scss/shared/_modal.scss
@@ -44,7 +44,7 @@
   }
 
   .ngdialog-overlay {
-    background-color: get-color("background");
+    @include background(linear-gradient(rgba($c-white, 0.2),  rgba($c-white, 0.4)));
     position: fixed;
       bottom: 0;
       left: 0;
@@ -58,38 +58,8 @@
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.4);
     color: $c-grey;
     overflow-y: scroll;
-    @include rem(height, 30);
     position: relative;
     z-index: 9999;
-
-    @include media($breakpoint-xs) {
-      height: 100%;
-      position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        top: 0;
-    }
-
-    @include media($breakpoint-s) {
-      @include span-columns(4);
-    }
-
-    @include media($breakpoint-m) {
-      @include span-columns(5);
-    }
-
-    @include media($breakpoint-l) {
-      @include span-columns(6);
-    }
-
-    @include media($breakpoint-xl) {
-      @include span-columns(6);
-    }
-
-    @include media($breakpoint-xxl) {
-      @include span-columns(6);
-    }
 
     .inner-content {
       @include rem(padding, 7.5, 1.5, 1.5);
@@ -158,6 +128,49 @@
     //   @include rem(padding, 1.5, 1.5, 1.5, 1.6);
     //   text-transform: uppercase;
     // }
+  }
+
+  &.small .ngdialog-content {
+    @include rem(height, 30);
+
+    @include media($breakpoint-xs) {
+      height: 100%;
+      position: fixed;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        top: 0;
+      width: 100%;
+    }
+
+    @include media($breakpoint-s) {
+      @include span-columns(4);
+    }
+
+    @include media($breakpoint-m) {
+      @include span-columns(5);
+    }
+
+    @include media($breakpoint-l) {
+      @include span-columns(6);
+    }
+
+    @include media($breakpoint-xl) {
+      @include span-columns(6);
+    }
+
+    @include media($breakpoint-xxl) {
+      @include span-columns(6);
+    }
+  }
+
+  &.full .ngdialog-content {
+    background-color: transparent;
+    position: fixed;
+      @include rem(bottom, 1.5);
+      @include rem(left, 1.5);
+      @include rem(right, 1.5);
+      @include rem(top, 1.5);
   }
 
   .ngdialog-close {
