Added new color directive for hue template.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -75,6 +75,7 @@
 
 @import "../app/shared/ui/action-bar/action-bar";
 @import "../app/shared/ui/button-group/button-group";
+@import "../app/shared/ui/color/color";
 @import "../app/shared/ui/form/form";
 @import "../app/shared/ui/range/range";
 @import "../app/shared/ui/remote-navigation/remote-navigation";
