--- a/src/app/shared/ui/form/form-field-templates/form-field-color.html
+++ b/src/app/shared/ui/form/form-field-templates/form-field-color.html
@@ -21,4 +21,8 @@
 -->
 
 
-<div>Create template for <strong>color</strong></div>
+<guh-modal label="{{ formField.name }}" modal-class="full">
+  <guh-color label="{{ formField.name }}"
+             state="formField.value"
+             on-change="formField.setValue('debounce', 600)"></guh-color>
+</guh-modal>
