--- a/src/app/components/devices/detail/device-class-templates/device-class-hue-light.html
+++ b/src/app/components/devices/detail/device-class-templates/device-class-hue-light.html
@@ -44,6 +44,9 @@
   <!-- Color temperature -->
   <guh-action device-id="{{ device.id }}" action-type-id="{{ device.actionsObject.setColorTemperature.actionType.id }}"></guh-action>
 
+  <!-- Color -->
+  <guh-action device-id="{{ device.id }}" action-type-id="{{ device.actionsObject.setColor.actionType.id }}"></guh-action>
+
   <!-- Set effect -->
   <guh-button-group device-id="{{ device.id }}" action="device.actionsObject.setEffect" buttons="[ 'none', 'color loop' ]"></guh-button-group>
 
