--- a/src/app/shared/ui/color/color.html
+++ b/src/app/shared/ui/color/color.html
@@ -20,10 +20,17 @@
   SOFTWARE.
 -->
 
-
-<p class="label">{{ color.label }}: {{ color.state }}</p>
 <div class="color" ng-style="{ 'background-color': color.state }">
-  <p>Click to select color</p>
-  <div ng-mousemove="moveHandle($event)" ng-click="color.setValue()" ng-dblclick="color.resetValue()"></div>
+  <button class="close" ng-click="color.closeModal()">
+    <svg class="icon">
+      <use xlink:href="./assets/svg/ui/ui.symbol.svg#close"></use>
+    </svg>
+  </button>
+
+  <div class="content">
+    <p>Click to save color</p>
+    <p class="current-color">{{ color.state }}</p>
+  </div>
+
+  <div class="background" ng-mousemove="moveHandle($event)" ng-click="color.setValue()" ng-dblclick="color.resetValue()"></div>
 </div>
-<button type="button" ng-click="color.resetValue()">Reset</button>
