Added new icons (skipnext, skipprevious, fastforward, rewind)

--- a/src/app/shared/ui/remote-player/remote-player.html
+++ b/src/app/shared/ui/remote-player/remote-player.html
@@ -25,7 +25,7 @@
   <button class="skipprevious" ng-click="remotePlayer.pressButton('skipprevious')">
     <span>
       <svg class="icon">
-        <use xlink:href="./assets/svg/ui/ui.symbol.svg#skip-backward"></use>
+        <use xlink:href="./assets/svg/ui/ui.symbol.svg#skipprevious"></use>
       </svg>
     </span>
   </button>
@@ -33,7 +33,7 @@
   <button class="rewind" ng-click="remotePlayer.pressButton('rewind')">
     <span>
       <svg class="icon">
-        <use xlink:href="./assets/svg/ui/ui.symbol.svg#skip-backward"></use>
+        <use xlink:href="./assets/svg/ui/ui.symbol.svg#rewind"></use>
       </svg>
     </span>
   </button>
@@ -57,7 +57,7 @@
   <button class="fastforward" ng-click="remotePlayer.pressButton('fastforward')">
     <span>
       <svg class="icon">
-        <use xlink:href="./assets/svg/ui/ui.symbol.svg#skip-forward"></use>
+        <use xlink:href="./assets/svg/ui/ui.symbol.svg#fastforward"></use>
       </svg>
     </span>
   </button>
@@ -65,7 +65,7 @@
   <button class="skipnext" ng-click="remotePlayer.pressButton('skipnext')">
     <span>
       <svg class="icon">
-        <use xlink:href="./assets/svg/ui/ui.symbol.svg#skip-forward"></use>
+        <use xlink:href="./assets/svg/ui/ui.symbol.svg#skipnext"></use>
       </svg>
     </span>
   </button>
