--- a/src/assets/scss/shared/_tiles.scss
+++ b/src/assets/scss/shared/_tiles.scss
@@ -23,9 +23,10 @@
  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 
-.tiles {
-  overflow: auto;
-  width: 100%;
+.tiles:after {
+  clear: both;
+  content: "";
+  display: block;
 }
 
 .tiles > .item {
