--- a/src/assets/scss/components/_intro.scss
+++ b/src/assets/scss/components/_intro.scss
@@ -24,7 +24,9 @@
 
 
 #main.intro {
+  height: 100%;
   @include rem(padding, 1.5);
+  overflow-y: scroll;
   position: fixed;
     bottom: 0;
     left: 0;
@@ -56,25 +58,25 @@
     @include media($breakpoint-xs) {
       // @include shift-in-context(1 of $columns-s);
       // @include span-columns(4);
-      width: 220px;
+      width: 140px;
     }
 
     @include media($breakpoint-s) {
       // @include shift-in-context(1 of $columns-s);
       // @include span-columns(4);
-      width: 240px;
+      width: 180px;
     }
 
     @include media($breakpoint-m) {
       // @include shift-in-context(2 of $columns-m);
       // @include span-columns(5);
-      width: 260px;
+      width: 220px;
     }
 
     @include media($breakpoint-l) {
       // @include shift-in-context(3 of $columns-l);
       // @include span-columns(6);
-      width: 280px;
+      width: 260px;
     }
 
     @include media($breakpoint-xl) {
