--- a/src/assets/scss/shared/_modal.scss
+++ b/src/assets/scss/shared/_modal.scss
@@ -57,7 +57,7 @@
     background-color: $c-white;
     box-shadow: 0px 4px 16px 0px rgba(0, 0, 0, 0.4);
     color: $c-grey;
-    overflow-y: scroll;
+    // overflow-y: scroll;
     position: relative;
     z-index: 9999;
 
