--- a/src/app/components/devices/detail/device-class-templates/template-not-available.html
+++ b/src/app/components/devices/detail/device-class-templates/template-not-available.html
@@ -53,9 +53,9 @@
 <div class="left">
   <h2>State</h2>
   <p ng-if="device.states.length === 0">No state available.</p>
-  <!-- <p ng-repeat="state in service.states | orderBy: 'name' track by $index">{{ state.stateType.name }}: {{ state.value }}</p> -->
-  <div ng-repeat="state in device.states track by $index" class="state">
-    <p class="value">{{ state.value }}</p>
+  <div ng-switch="state.stateType.unit" ng-repeat="state in device.states track by $index" class="state">
+    <p class="value" ng-switch-when="UnitUnixTime">{{ state.value * 1000 | date: 'dd.MM.yyyy' }}, {{ state.value * 1000 | date: 'HH:mm' }}</p>
+    <p class="value" ng-switch-default>{{ state.value }} {{ state.stateType.unit | unit }}</p>
     <p class="name">{{ state.stateType.name }}</p>
   </div>
 </div>
