--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -24,58 +24,77 @@
 
 
 $grey: #676767;
+$green: #7cc09a;
+$turquoise: #57baae;
 $white: #fff;
 
 $background: $white;
-$background-active: $grey;
 $color: $grey;
 
 
-.tabset {
-  @include rem(margin, 4.5, 0, 0);
+header.app {
+  @include rem(height, 4.5);
+  position: fixed;
+    left: -10%;
+    top: 0;
+  text-align: right;
+  width: 120%;
+  z-index: 9000;
 
-  ul {
-    @include display(flex);
-    @include flex-wrap(nowrap);
+  .content {
+    margin: 0 auto;
+    position: relative;
+    width: 28%;
   }
 
-  li {
-    @include flex(1);
-    @include flex-grow(1);
-
-    &:first-child a {
-      @include rem(border-bottom-left-radius, 1.5);
-      @include rem(border-top-left-radius, 1.5);
-    }
-
-    &:last-child a {
-      border: 1px solid rgba($background-active, 0.1);
-      @include rem(border-bottom-right-radius, 1.5);
-      @include rem(border-top-right-radius, 1.5);
-    }
-  }
-
-  a {
+  nav {
     background-color: $background;
-    border: 1px solid rgba($background-active, 0.1);
-    border-right: none;
-    color: $color;
-    display: block;
-    @include rem(padding, 0.7, 1.5, 0.8);
-    text-align: center;
-    text-decoration: none;
 
-    &.active {
-      background-color: rgba($background-active, 0.1);
-      color: $color;
+    ul {
+      border-bottom: 1px solid rgba($grey, 0.1);
+      margin: 0 auto;
+      overflow: auto;
     }
 
-    &.disabled {
+    li {
+      float: left;
+    }
+
+    a {
       color: rgba($color, 0.2);
+      display: block;
+      @include rem(padding, 1.5);
+      text-decoration: none;
+
+      &.active {
+        color: $color;
+      }
     }
   }
-}
 
-.tab {
-  @include rem(padding, 3, 0, 0);
+  .action-bar {
+    position: absolute;
+      right: 0;
+      top: 0;
+
+    button {
+      @include appearance(none);
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      outline: none;
+      @include rem(padding, 1.5);
+    }
+
+    span {
+      display: none;
+    }
+
+    .icon {
+      display: block;
+      fill: $color;
+      @include rem(height, 1.5);
+      @include rem(width, 1.5);
+    }
+  }
 }
