--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,16 +21,27 @@
 -->
 
 
-<nav class="app">
+<!-- <nav class="app">
   <ul>
     <li><a ng-class="{ active: app.$state.includes('guh.devices') }" ui-sref="guh.devices.master">Devices</a></li>
     <li><a ng-class="{ active: app.$state.includes('guh.services') }" ui-sref="guh.services.master">Services</a></li>
-    <!-- <li><a ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li> -->
+    <!- <li><a ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li> ->
   </ul>
-</nav>
+</nav> -->
 
 <header class="app">
-  <guh-action-bar></guh-action-bar>
+  <div class="content">
+    <nav>
+      <ul>
+        <li><a ng-class="{ active: app.$state.includes('guh.devices') }" ui-sref="guh.devices.master">Devices</a></li>
+        <li><a ng-class="{ active: app.$state.includes('guh.services') }" ui-sref="guh.services.master">Services</a></li>
+        <!-- <li><a ng-class="{ active: app.$state.includes('guh.moods') }" ui-sref="guh.moods.master">Moods</a></li> -->
+      </ul>
+    </nav>
+
+    <guh-action-bar></guh-action-bar>
+  </div>
 </header>
 
-<div ui-view class="app content"></div>
+<!-- <div ui-view class="app content"></div> -->
+<div ui-view class="content"></div>
