--- a/src/app/components/devices/detail/devices-detail.html
+++ b/src/app/components/devices/detail/devices-detail.html
@@ -21,9 +21,24 @@
 -->
 
 
-<!-- Header -->
-<div>
-  <h2>{{ device.name }}</h2>
-</div>
+<div class="horizontal-container">
+  <div class="horizontal-item">
+    <h2 class="heading">Thermostat</h2>
+  </div>
 
-<ng-include src="device.templateUrl" ng-if="device.templateReady"></ng-include>
+  <div class="horizontal-item">
+    <h2 class="heading">Light</h2>
+  </div>
+
+  <div class="horizontal-item_current">
+    <ng-include src="'./app/components/devices/detail/device-class-templates/template-not-available.html'" ng-if="device.templateReady"></ng-include>
+  </div>
+
+  <div class="horizontal-item">
+    <h2 class="heading">Music</h2>
+  </div>
+
+  <div class="horizontal-item">
+    <h2 class="heading">Blinds</h2>
+  </div>
+</div>
