--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -24,58 +24,60 @@
 
 
 $grey: #676767;
+$green: #7cc09a;
+$turquoise: #57baae;
 $white: #fff;
 
 $background: $white;
-$background-active: $grey;
-$color: $grey;
+$background-light: $green;
+$background-dark: $turquoise;
+$color-text: $grey;
+$color-highlight: $turquoise;
 
-
-.tabset {
-  @include rem(margin, 4.5, 0, 0);
-
-  ul {
-    @include display(flex);
-    @include flex-wrap(nowrap);
-  }
-
-  li {
-    @include flex(1);
-    @include flex-grow(1);
-
-    &:first-child a {
-      @include rem(border-bottom-left-radius, 1.5);
-      @include rem(border-top-left-radius, 1.5);
-    }
-
-    &:last-child a {
-      border: 1px solid rgba($background-active, 0.1);
-      @include rem(border-bottom-right-radius, 1.5);
-      @include rem(border-top-right-radius, 1.5);
-    }
-  }
-
-  a {
-    background-color: $background;
-    border: 1px solid rgba($background-active, 0.1);
-    border-right: none;
-    color: $color;
-    display: block;
-    @include rem(padding, 0.7, 1.5, 0.8);
-    text-align: center;
-    text-decoration: none;
-
-    &.active {
-      background-color: rgba($background-active, 0.1);
-      color: $color;
-    }
-
-    &.disabled {
-      color: rgba($color, 0.2);
-    }
-  }
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
-.tab {
-  @include rem(padding, 3, 0, 0);
+html,
+body,
+#main {
+  height: 100%;
+}
+
+html {
+  @include linear-gradient(to bottom, $background-light, $background-dark);
+  box-sizing: border-box;
+  @include rootsize();
+}
+
+body {
+  color: $color-text;
+  font-family: 'Ubuntu';
+  font-weight: 400;
+  @include rem(font-size, 1);
+  @include rem(line-height, 1.5);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  
+}
+
+h2 {
+  @include rem(font-size, 2);
+  @include rem(line-height, 3);
+}
+
+p {
+
+}
+
+a {
+  color: $color-highlight;
 }
